# americas-immigration

./: .gitignore  index.html  package.json
data/: pyproject.toml
data/americas_immigration/: __main__.py  census.py  output.py
data/tests/: test_census.py  test_output.py
public/: data.json
src/: App.tsx  styles.css
src/__tests__/: App.test.tsx
