[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "americas-immigration-data"
version = "0.1.0"
description = "Data pipeline for Americas Immigration dashboard — fetches ACS B05006 from Census API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["americas_immigration*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
